--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
+# Python bytecode
 __pycache__/
-*.pyc
+*.py[cod]
+
+# Virtual environments
 .venv/
 .env/
-.idea/
+
+# Logs and temp files
 *.log
 *.tmp
+
+# IDE / Editor folders
+.idea/
+.vscode/
+
+# OS files
 .DS_Store
+
+# Keep source files only
 !*.py
 !*.ipynb
 !README.md
-!.gitignore
+!LICENSE
